Fixed sticky footer covering content.

--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 /* Stylesheet for Personal Website */
 
-* {
-    margin: 0;
-    padding: 0;
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+body {
+    padding-bottom: 100px;
 }
 
 #title {
     padding-left: 10px;
-}
-
-#main {
-    margin-top: 50px;
 }
 
 #content {
@@ -18,7 +18,7 @@
 }
 
 #content h1 {
-    margin-top: 40px;
+    padding-top: 40px;
 }
 
 .footer {
